--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
+    <script src="https://ham-get.github.io/JavaScript_practice-4-/jquery.min.js"></script>
     <script>
         var catImg = [
         'https://github.com/ham-get/JavaScript_practice-4-/blob/main/img01.jpg?raw=true',
